--- a/package.json
+++ b/package.json
@@ -21,5 +21,17 @@
   "bugs": {
     "url": "https://github.com/ummahusla/PotatoCSS/issues"
   },
-  "homepage": "https://github.com/ummahusla/PotatoCSS#readme"
+  "homepage": "https://github.com/ummahusla/PotatoCSS#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-cssbeautify": "^0.1.3",
+    "gulp-less": "^3.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.1.1"
+  }
 }
