--- a/.editorconfig
+++ b/.editorconfig
@@ -5,18 +5,12 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
+indent_style = tab
+indent_size = 2
 charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.{css,html,js,json}]
-indent_size = 2
-
-[*.{scss,less}]
-indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
