--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "potato-css",
-  "version": "1.0.2",
-  "description": "Simple CSS framework for hackers. Simple as potato. ",
-  "authors": ["Edvins Antonovs <ummahusla@gmail.com>"],
-  "main": "stylesheets/css/potato.css",
-  "scripts": {
-    "install": "gulpfile.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ummahusla/PotatoCSS.git"
-  },
-  "keywords": [
-    "CSS", "CSS-framework", "UI", "responsive-grid", "responsive", "layout"
-  ],
-  "author": "Edvins Antonovs",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ummahusla/PotatoCSS/issues"
-  },
-  "homepage": "https://github.com/ummahusla/PotatoCSS#readme",
-  "devDependencies": {
-  }
+	"name": "potato-css",
+	"version": "1.0.2",
+	"description": "Simple CSS framework for hackers. Simple as potato. ",
+	"authors": [
+		"Edvins Antonovs <ummahusla@gmail.com>"
+	],
+	"main": "stylesheets/css/potato.css",
+	"scripts": {
+		"install": "gulpfile.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ummahusla/PotatoCSS.git"
+	},
+	"keywords": [
+		"CSS",
+		"CSS-framework",
+		"UI",
+		"responsive-grid",
+		"responsive",
+		"layout"
+	],
+	"author": "Edvins Antonovs",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/ummahusla/PotatoCSS/issues"
+	},
+	"homepage": "https://github.com/ummahusla/PotatoCSS#readme",
+	"devDependencies": {
+	}
 }
