--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"gulp-babel": "^7.0.0",
 		"gulp-concat": "^2.6.1",
 		"gulp-csso": "^3.0.0",
+		"gulp-less": "^3.3.2",
 		"gulp-postcss": "^7.0.0",
 		"gulp-rename": "^1.2.2",
 		"gulp-sass": "^3.1.0",
