Add gulp tasks to build SASS (`build-sass`) and LESS (`build-less`) sources. And `test-css` task to test style and validity of output css. Also fix concatenation of js files
new dependencies:
- gulp-stylefmt - format SASS/LESS output to mostly the same code style
- postcss-reporter - better postcss log
- run-sequence - run gulp tasks in order
- stylelint - lint stylesheets
- stylelint-config-standard - standard config for stylelint
- stylelint-csstree-validator - CSS validator for stylelint

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # System files
 .dat
 .thumbs
+.DS_Store
 
 # Sublime Text #
 .sublime
@@ -23,7 +24,6 @@
 
 # Node
 node_modules/
-package-lock.json
 
 # Test folders
 test/
