Fix instal script command in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	],
 	"main": "stylesheets/css/potato.css",
 	"scripts": {
-		"install": "gulpfile.js"
+		"install": "gulp"
 	},
 	"repository": {
 		"type": "git",
